# regnumassets

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: export_image.rs  export_music.rs  export_sound.rs  export_texture.rs  list_characters.rs  list_images.rs  list_music.rs  list_sounds.rs  list_texts.rs  list_textures.rs  save_sound.rs  show_text.rs
src/: errors.rs  lib.rs
src/asset/: attribute.rs  bookmark.rs  content.rs  data.rs  mod.rs
src/asset/image/: mod.rs
src/asset/sound/: mod.rs
src/asset/text/: content.rs  mod.rs  parse.rs
src/asset/texture/: mod.rs
src/resource/: index.rs  item.rs  mod.rs  node.rs
