[package]
name = "regnumassets"
version = "0.3.0"
edition = "2021"
description = "A crate for parsing game asset files from MMORPG Champions of Regnum"
license = "MIT"
repository = "https://github.com/emaphp/regnumassets/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
encoding_rs = "0.8"
nom = "8.0.0"
byteorder = "1.5.0"
ddsfile = "0.5.2"

[examples]
list_sounds = { name = "list_sounds", path = "examples/list_sounds.rs" }
list_music = { name = "list_music", path = "examples/list_music.rs" }
list_texts = { name = "list_texts", path = "examples/list_texts.rs" }
list_textures = { name = "list_textures", path = "examples/list_textures.rs" }
list_images = { name = "list_images", path = "examples/list_images.rs" }
list_characters = { name = "list_characters", path = "examples/list_characters.rs" }
export_sound = { name = "export_sound", path = "examples/export_sound.rs" }
export_music = { name = "export_music", path = "examples/export_music.rs" }
export_texture = { name = "export_texture", path = "examples/export_texture.rs" }
export_image = { name = "export_image", path = "examples/export_image.rs" }
show_text = { name = "show_text", path = "examples/show_text.rs" }
